--- a/src/Pages/Stake/parts/StakeAmount.css
+++ b/src/Pages/Stake/parts/StakeAmount.css
@@ -23,6 +23,7 @@
 .amount__subtitle{
     font-style: normal;
     font-weight: normal;
+    max-width: calc(100% - 30px);
     font-size: 16px;
     line-height: 126%;
 }
