--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@ body {
   background-repeat: repeat;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
 @media screen and (max-width: 600px){
   body{
